@@ -1,5 +1,7 @@
 Changes from 0.4.0 to 0.4.1
 - simplified headers
+- manpager config tab
+- theme icons now bound to design ui
 
 Changes from 0.3.4 to 0.4.0
 - new CoastalView offers text viewer with search (^f, f3)
